--- a/package.json
+++ b/package.json
@@ -3,8 +3,5 @@
   "version": "0.1.0",
   "main": "index.js",
   "license": "MIT",
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ]
+  "private": true
 }
