--- a/packages/pearpass-desktop/package.json
+++ b/packages/pearpass-desktop/package.json
@@ -51,6 +51,9 @@
     "hyperbee": "^2.4.1",
     "hypercore": "^10.7.0",
     "hyperswarm": "^4.3.6",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
+    "mobx-state-tree": "^5.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
