--- a/packages/pearpass-desktop/package.json
+++ b/packages/pearpass-desktop/package.json
@@ -10,7 +10,9 @@
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
-    "format": "prettier --write \"src/**/*.{js,jsx,json,md,ts,tsx}\""
+    "format": "prettier --write \"src/**/*.{js,jsx,json,md,ts,tsx}\"",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "license": "MIT",
@@ -21,6 +23,7 @@
     "@electron-forge/maker-squirrel": "^6.0.4",
     "@electron-forge/maker-zip": "^6.0.4",
     "@electron-forge/plugin-webpack": "^6.0.4",
+    "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
@@ -31,9 +34,11 @@
     "eslint": "^8.32.0",
     "eslint-plugin-import": "^2.27.5",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
+    "jest": "^29.4.1",
     "node-loader": "^2.0.0",
     "prettier": "^2.8.3",
     "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "~4.5.4"
