--- a/packages/pearpass-desktop/package.json
+++ b/packages/pearpass-desktop/package.json
@@ -33,6 +33,7 @@
     "electron": "22.0.3",
     "eslint": "^8.32.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
     "jest": "^29.4.1",
     "node-loader": "^2.0.0",
@@ -60,7 +61,8 @@
     "mobx-react-lite": "^3.4.0",
     "mobx-state-tree": "^5.1.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0"
   },
   "resolutions": {
     "udx-native": "github:holepunchto/libudx.git"
