--- a/packages/pearpass-console/tsconfig.json
+++ b/packages/pearpass-console/tsconfig.json
@@ -1,10 +1,14 @@
 {
-	"extends": "@sindresorhus/tsconfig",
-	"compilerOptions": {
-		"module": "commonjs",
-		"jsx": "react",
-		"esModuleInterop": true,
-		"outDir": "dist"
-	},
-	"include": ["source"]
+  "compilerOptions": {
+    "moduleDetection": "force",
+    "target": "ES2020",
+    "allowSyntheticDefaultImports": true,
+    "module": "commonjs",
+    "jsx": "react",
+    "esModuleInterop": true,
+    "outDir": "dist",
+    "skipLibCheck": true,
+    "noImplicitAny": false
+  },
+  "include": ["source"]
 }
