--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "name": "pearpass",
   "version": "0.1.0",
-  "main": "index.js",
   "license": "MIT",
-  "private": true
+  "packageManager": "yarn@3.4.1",
+  "devDependencies": {
+    "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
+  },
+  "workspaces": [
+    "./packages/pearpass-console",
+    "./packages/pearpass-desktop",
+    "./packages/vault"
+  ]
 }
