--- a/packages/pearpass-console/package.json
+++ b/packages/pearpass-console/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pearpass-console",
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "packageManager": "yarn@3.4.1",
   "license": "MIT",
   "bin": "dist/cli.js",
   "engines": {
@@ -54,7 +55,6 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "ink-testing-library": "^2.1.0",
-    "typescript": "^4.9.5",
     "xo": "^0.39.1"
   },
   "prettier": {
