--- a/packages/pearpass-desktop/package.json
+++ b/packages/pearpass-desktop/package.json
@@ -38,11 +38,7 @@
     "jest": "^29.4.1",
     "node-loader": "^2.0.0",
     "prettier": "^2.8.3",
-    "style-loader": "^3.3.1",
-    "ts-jest": "^29.0.5",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "typescript": "~4.5.4"
+    "style-loader": "^3.3.1"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
