--- a/packages/pearpass-mobile/package.json
+++ b/packages/pearpass-mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pearpass",
+  "name": "pearpass-mobile",
   "version": "0.0.1",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
