--- a/packages/pearpass-console/tsconfig.json
+++ b/packages/pearpass-console/tsconfig.json
@@ -14,7 +14,7 @@
   "include": ["src/**/*"],
   "references": [
     {
-      "path": "../vault"
+      "path": "../@endless-p2p/vault"
     }
   ]
 }
