--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "license": "MIT",
   "packageManager": "yarn@3.4.1",
-  "devDependencies": {
-    "ts-jest": "^29.0.5",
-    "ts-loader": "^9.4.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+  "scripts": {
+    "build:libs": "yarn workspace @endless-p2p/vault build",
+    "start:console": "yarn workspace pearpass-console start",
+    "start:desktop": "yarn workspace pearpass-desktop start",
+    "start:mobile": "yarn workspace pearpass-mobile start"
   },
   "workspaces": [
     "./packages/pearpass-console",
     "./packages/pearpass-desktop",
-    "./packages/vault"
+    "./packages/pearpass-mobile",
+    "./packages/@endless-p2p/vault"
   ]
 }
