--- a/packages/pearpass-desktop/package.json
+++ b/packages/pearpass-desktop/package.json
@@ -24,6 +24,7 @@
     "@electron-forge/maker-zip": "^6.0.4",
     "@electron-forge/plugin-webpack": "^6.0.4",
     "@types/jest": "^29.4.0",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
@@ -38,7 +39,11 @@
     "jest": "^29.4.1",
     "node-loader": "^2.0.0",
     "prettier": "^2.8.3",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "ts-jest": "^29.0.5",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "typescript": "~4.5.4"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
