--- a/packages/pearpass-console/package.json
+++ b/packages/pearpass-console/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "ink-testing-library": "^2.1.0",
+    "typescript": "^4.9.5",
     "xo": "^0.39.1"
   },
   "prettier": {
