--- a/packages/pearpass-desktop/package.json
+++ b/packages/pearpass-desktop/package.json
@@ -24,6 +24,7 @@
     "@electron-forge/maker-zip": "^6.0.4",
     "@electron-forge/plugin-webpack": "^6.0.4",
     "@types/jest": "^29.4.0",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
