--- a/packages/@endless-p2p/vault/package.json
+++ b/packages/@endless-p2p/vault/package.json
@@ -21,6 +21,7 @@
     "corestore": "^6.4.3",
     "hyperbee": "^2.4.2",
     "hypercore": "^10.7.0",
-    "hyperswarm": "^4.3.7"
+    "hyperswarm": "^4.3.7",
+    "random-access-memory": "^6.1.0"
   }
 }
