--- a/packages/@endless-p2p/vault/tsconfig.json
+++ b/packages/@endless-p2p/vault/tsconfig.json
@@ -9,7 +9,8 @@
     "esModuleInterop": true,
     "outDir": "dist",
     "skipLibCheck": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"]
 }
