--- a/packages/@endless-p2p/vault/tsconfig.json
+++ b/packages/@endless-p2p/vault/tsconfig.json
@@ -12,5 +12,6 @@
     "noImplicitAny": false,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"]
+  "exclude": ["src/**/*.test.ts"],
+  "include": ["src/**/*", "test"]
 }
