--- a/packages/@endless-p2p/vault/package.json
+++ b/packages/@endless-p2p/vault/package.json
@@ -16,6 +16,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@hyperswarm/testnet": "^3.1.1",
     "b4a": "^1.6.1",
     "corestore": "^6.4.3",
     "crypto": "^1.0.1",
