--- a/packages/@endless-p2p/vault/package.json
+++ b/packages/@endless-p2p/vault/package.json
@@ -7,7 +7,7 @@
   "types": "dist/src",
   "scripts": {
     "build": "rm -rf ./dist && tsc",
-    "test": "brittle"
+    "test": "jest"
   },
   "devDependencies": {
     "@types/jest": "^29.4.0",
