--- a/packages/@endless-p2p/vault/package.json
+++ b/packages/@endless-p2p/vault/package.json
@@ -16,12 +16,15 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@hyperswarm/testnet": "^3.1.1",
     "b4a": "^1.6.1",
+    "brittle": "^3.1.3",
     "corestore": "^6.4.3",
     "crypto": "^1.0.1",
     "hyperbee": "^2.4.2",
     "hypercore": "^10.7.0",
     "hyperswarm": "^4.3.7",
+    "nonsynchronous": "^1.2.0",
     "random-access-memory": "^6.1.0"
   }
 }
