--- a/packages/@endless-p2p/vault/package.json
+++ b/packages/@endless-p2p/vault/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@hyperswarm/testnet": "^3.1.1",
+    "autobase": "hypercore-protocol/autobase",
     "b4a": "^1.6.1",
     "corestore": "^6.4.3",
     "crypto": "^1.0.1",
