--- a/packages/@endless-p2p/pear-db/package.json
+++ b/packages/@endless-p2p/pear-db/package.json
@@ -5,18 +5,19 @@
   "description": "A MongoDB-like database built on top of Hyperbee with support for indexing",
   "main": "index.js",
   "scripts": {
-    "lint": "standard --fix",
-    "test": "npm run lint && node ./test.js"
+    "test": "node ./test.js"
   },
+  "types": "index.d.ts",
   "dependencies": {
     "bson": "^4.3.0",
-    "cbor": "^8.1.0"
+    "cbor-sync": "^1.0.4"
   },
   "devDependencies": {
+    "autobase": "https://github.com/hypercore-protocol/autobase",
+    "b4a": "^1.6.0",
     "hyperbee": "^2.4.2",
     "hypercore": "^10.7.0",
     "random-access-memory": "^6.1.0",
-    "standard": "^16.0.3",
     "tape": "^5.2.2"
   }
 }
