--- a/.gitignore
+++ b/.gitignore
@@ -121,6 +121,7 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
+.vscode
 
 # yarn v2 (not using Zero-Installs)
 .pnp.*
@@ -130,3 +131,5 @@ dist
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+.DS_Store
